# rk9students

./: README.md
code/: AUTHORS  CMakeLists.txt  README.md  rk9works-config.cmake
code/src/: CMakeLists.txt
code/src/_ext/gtest/: CMakeLists.txt
code/src/boolean_poly/: CMakeLists.txt  main.cpp
code/src/boolean_poly/IntersectionTest/: IntersectionTest.sln
code/src/boolean_poly/IntersectionTest/IntersectionTest/: IntersectionTest.vcxproj
code/src/common/: CMakeLists.txt
code/src/common/include/common/: BoundingBox.h  Plane.h  Point.h  PolyModel.h  Triangle.h  Vector3.h
code/src/common/src/: Plane.cpp  PolyModel.cpp  Triangle.cpp  Vector3.cpp
code/src/common/test/: CMakeLists.txt  test.cpp
code/src/conform_lattice/: CMakeLists.txt  MarchingCubes.cpp  MarchingCubes.h  Transform.h  main.cpp
code/src/conform_lattice/glm/: CMakeLists.txt
code/src/lattice/: CMakeLists.txt  LookUpTable.h  MarchingCubes.cpp  MarchingCubes.h  PointWithDensity.h  RectLattice.cpp  RectLattice.h  UnitCell.h  fparser.cpp  fparser.h  main.cpp  ply.cpp  ply.h
code/src/lattice/glm/: glm.hpp
code/src/navigate/: .gitignore
code/src/navigate/Source/: CMakeLists.txt  README.md  capture.cpp  main.cpp
code/src/sample_app/: CMakeLists.txt  main.cpp
code/src/stl_errors/test_models/: cube_2_holes(1+1tr).stl  cube_2_holes(2+1tr).stl  cube_2_holes(2+2tr).stl  cube_single hole(2tr).stl  cube_single_hole(1tr).stl  sphere_2_holes(1+1tr).stl  sphere_2_holes(1+3tr).stl  sphere_2_holes(3+3tr).stl  sphere_no_holes.stl  sphere_single_hole(1tr).stl  sphere_single_hole(3tr).stl
code/src/tomo_mesh/: README.md
code/src/tomo_mesh/src/: CMakeLists.txt  conanfile.txt  main.cpp
code/src/webapp/MedCad/: MedCad.sln
code/src/webapp/MedCad/MedCad/: .gitignore  MedCad.xproj  Program.cs  Startup.cs  package.json  project.json  webpack.config.js  webpack.config.vendor.js
code/src/webapp/MedCad/MedCad/ClientApp/: boot-client.ts  boot-server.ts
code/src/webapp/MedCad/MedCad/ClientApp/app/: app.module.ts
code/src/webapp/MedCad/MedCad/ClientApp/app/components/app/: app.component.html  app.component.scss  app.component.ts
code/src/webapp/MedCad/MedCad/ClientApp/app/components/cad/: cad.component.html  cad.component.scss  cad.component.ts
code/src/webapp/MedCad/MedCad/ClientApp/app/components/headerbar/: headerbar.component.html  headerbar.component.scss  headerbar.component.ts
code/src/webapp/MedCad/MedCad/ClientApp/app/components/navmenu/: navmenu.component.html
code/src/webapp/MedCad/MedCad/ClientApp/app/components/profile/: profile.component.ts
code/src/webapp/MedCad/MedCad/ClientApp/app/components/workspace/: workspace.component.html  workspace.component.scss  workspace.component.ts
code/src/webapp/MedCad/MedCad/ClientApp/app/modules/: app-routing.module.ts
code/src/webapp/MedCad/MedCad/ClientApp/app/modules/cad/: cad-routing.module.ts  cad.module.ts
code/src/webapp/MedCad/MedCad/ClientApp/app/services/auth/: auth.service.ts
code/src/webapp/MedCad/MedCad/ClientApp/app/services/models/: models.service.ts
code/src/webapp/MedCad/MedCad/Controllers/: HomeController.cs  SampleDataController.cs
code/src/webapp/MedCad/MedCad/Models/: Model.cs
code/src/webapp/MedCad/MedCad/Properties/: launchSettings.json
code/src/webapp/MedCad/MedCad/Views/: _ViewImports.cshtml
code/src/webapp/MedCad/MedCad/Views/Home/: Index.cshtml
code/src/webapp/MedCad/MedCad/Views/Shared/: _Layout.cshtml
doc/: README.md
doc/Antipova/: Report.md  TZ.md  plan.md
doc/Kazakhmedov/: Draft proposal.md  plan.md  report(mod).md  report.md
doc/Kazakhmedov/media/: Thumbs.db
doc/Kaziakhmedov/: Report.pptx  plan.md  report.md
doc/Kaziakhmedov/Images/: Shrinkage.xcf
doc/Kaziakhmedov/Materials/code/Taubin/: main.cpp  main.h  mesh.cpp  mesh.h
doc/Kobzar/: Plan.md  Report.md
doc/Kobzar/References/: link.md
doc/Martyanova/: Marching cubes. Topological guarantees.md  Source_code.txt  TZ.md  plan.md  presentation.pptx
doc/Ramzhaev/: Data_of_mesurment.xlsx  Plan_of_working.xlsx  Presentation.pptx  plan.md  report.md  tz.md  мethod_of_callibration.md
doc/Romanov/: Report.md  TZ.md
doc/Shilyaev/: RPZ.docx  plan.md  report.md
doc/Tilichenko/: Lecture.md  TZ.md  Theses.md
doc/Udaltsov/: Plan.md  Segmentation.md
doc/_spring_2016/: 2016.03.04_Git.pptx  2016.04.14_CMake.pptx
src/boolean_poly/IntersectionTest/IntersectionTest/IntersectionTest/: main.cpp
src/common/: Plane.cpp  Plane.h  PolyModel.cpp
